# stock-quality-scorer

./: .dockerignore  .gitignore  LICENSE  README.md  fly.backend.toml  fly.frontend.toml  main.py  podman-compose.yaml  pyproject.toml
backend/: .env.template  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: api.py  config.py  constants.py  exception_handling.py  exceptions.py  lifespan.py  model.py
backend/app/domain/: route.py  schemas.py  service.py
backend/app/src/core/: lifespan.py  model.py
backend/tests/integration/: test_fastapi.py
backend/tests/unit/: test_service.py
frontend/: .env.template  Dockerfile  main.py  pyproject.toml
frontend/src/core/: api.py  config.py
ml/: pyproject.toml
ml/data/: snp_500_constituents_260505.csv
ml/data/parquets/: snp_500_constituents_260505.parquet  snp_500_constituents_fundamentals_260506.parquet  training_dataset.parquet
ml/scripts/: _utils.py  generate_training_dataset.py  get_fundamentals.py  get_price_history.py  get_snp_500.py  grab_data.py  train_models.py  utils.py
ml/scripts/get_data/: generate_training_dataset.py  get_fundamentals.py  get_price_history.py  get_snp_500.py  grab_data.py
ml/scripts/train_model/: calibrate_model.py  train_models.py
ml/tests/: test_data.py  test_model.py
podman/: frontend.Dockerfile  podman-compose.yaml
