[project]
name = "stock-quality-scorer"
version = "0.1.0"
description = "A stock quality scorer that leverages machine learning to do the scoring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "backend",
    "frontend",
    "ml",
]

[tool.ty.environment]
root = ["./ml", "./backend", "./frontend"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "typos>=1.46.0",
]


[tool.typos.files]
extend-exclude = [
    "ml/data",
    "uv.lock",
]

[tool.typos.default.extend-words]
# crate = "crate" # supressing false positive
# teh = "the" # force correction
parquest = "parquet"
