[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cachetools>=7.1.1",
    "cachetools-async>=0.0.5",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "yfinance>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
